--- a/style.css
+++ b/style.css
@@ -34,12 +34,13 @@ h3{
 
 /*top section */
 .top-section{
-    margin-top: 30px;
+    justify-content: center;
 }
 .top-child{
     width: 50%;
     padding-left: 5%;
     padding-right: 2%;
+    justify-content: center;
 }
 .top-child img{
     width: 100%;
