--- a/style.css
+++ b/style.css
@@ -33,9 +33,7 @@ h3{
 
 
 /*top section */
-.top-section{
-    justify-content: center;
-}
+
 .top-child{
     width: 50%;
     padding-left: 5%;
@@ -44,6 +42,9 @@ h3{
 }
 .top-child img{
     width: 100%;
+}
+.top-child h1{
+    padding-top: 60px;
 }
 
 
