--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h3{
     font-weight: bold;
     color: white;
     display: inline-block;
-    margin-top: 25px;
+    margin: 25px 0px;
     padding: 20px 35px;
     border-radius: 50px;
     box-shadow: 2px 2px 10px #91DAFD ;
