--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ h3{
     font-size: 28px;
     color: black;
 }
+p{
+    font-size: 18px;
+    line-height: 1.5;
+}
 .highlight-text{
     color: #4AACFB;
 }
@@ -25,7 +29,7 @@ h3{
     margin: 25px 0px;
     padding: 20px 35px;
     border-radius: 50px;
-    box-shadow: 2px 2px 10px #91DAFD ;
+    box-shadow: 5px 5px 20px #91DAFD ;
 }
 .flexible{
     display: flex;
@@ -33,7 +37,9 @@ h3{
 
 
 /*top section */
-
+.top-section{
+    margin-top: 60px;
+}
 .top-child{
     width: 50%;
     padding-left: 5%;
@@ -44,7 +50,7 @@ h3{
     width: 100%;
 }
 .top-child h1{
-    padding-top: 60px;
+   
 }
 
 
@@ -74,7 +80,7 @@ h3{
     margin-bottom: 80px;
 }
 .recipie-text{
-    width: 40%;
+    width: 45%;
     text-align: center;
     margin: auto;
 }
