extra potion added

--- a/style.css
+++ b/style.css
@@ -34,12 +34,16 @@ p{
 .flexible{
     display: flex;
 }
+.content-center{
+   padding: 50px 0px;
+}
+.card-img{
+    width: 100%;
+    border-radius: 20px;
+}
 
 
 /*top section */
-.top-section{
-    margin-top: 60px;
-}
 .top-child{
     width: 50%;
     padding-left: 5%;
@@ -49,14 +53,11 @@ p{
 .top-child img{
     width: 100%;
 }
-.top-child h1{
-   
-}
 
 
 /*about section */
 .about-section{
-    margin: 80px 0px;
+    margin: 80px 0;
     background-image: url('images/shapes/blue-frame.jpg');
     background-size: 100% 100%;
 }
@@ -71,7 +72,7 @@ p{
     margin: 30px 0 ;
 }
 .about-section img{
-    width: 60%;
+    width: 70%;
 }
 
 
@@ -91,13 +92,25 @@ p{
     box-shadow: 2px 2px 10px gray;
     border-radius: 20px;
 }
-.item-card img{
-    width: 100%;
+
+
+
+/*place section*/
+.place-section{
+    text-align: center;
+    margin: 80px 0;
+}
+.place-card{
+    width:45%;
+    margin: 30px 2%;
+    padding:1%;
+    box-shadow: 2px 2px 10px gray;
+    border-radius: 20px;
 }
 
 
-/*bottom section */
 
+/*bottom section */
 .bottom-section{
     background-color: #0B0E17;
     padding: 20px 0px 60px ;
