--- a/style.css
+++ b/style.css
@@ -53,20 +53,21 @@ p{
     padding-left: 5%;
 }
 .header-child:last-of-type{
-    width: 40%;
-    padding-left: 30%;
+    width: 35%;
+    padding-left: 35%;
 }
 .header h1{
    font-family: 'Zen Tokyo Zoo', cursive;
 }
 li{
     list-style-type:none;
-    width: 90px;
+    width: 100px;
+    display: inline-block;
     padding: 20px 0px;
-    margin: 0 2%;
+    margin: 5px 2%;
     border-radius: 10px;
     text-align: center;
-    box-shadow: 2px 2px 10px #EBF8FF;
+    box-shadow: 2px 2px 10px #b0e0fa;
 }
 .header-child li a{
     text-decoration: none;
