--- a/style.css
+++ b/style.css
@@ -48,16 +48,22 @@ p{
     background-color: #4AACFB;
     color: white;
 }
-.header-child:first-of-type{
+/*.header-child:first-of-type{
     width: 25%;
     padding-left: 5%;
 }
 .header-child:last-of-type{
     width: 35%;
     padding-left: 35%;
-}
+}*/
 .header h1{
+    width: 25%;
+    padding-left: 5%;
    font-family: 'Zen Tokyo Zoo', cursive;
+}
+.header ul{
+    width: 35%;
+    padding-left: 35%;
 }
 li{
     list-style-type:none;
@@ -69,13 +75,11 @@ li{
     text-align: center;
     box-shadow: 2px 2px 10px #b0e0fa;
 }
-.header-child li a{
+.header li a{
     text-decoration: none;
     color: white;
     font-weight: 600;
 }
-
-
 
 /*top section */
 .top-child{
@@ -109,7 +113,6 @@ li{
     width: 70%;
 }
 
-
 /*recipie section */
 .recipie-section{
     margin-bottom: 80px;
@@ -127,8 +130,6 @@ li{
     border-radius: 20px;
 }
 
-
-
 /*place section*/
 .place-section{
     text-align: center;
@@ -141,8 +142,6 @@ li{
     box-shadow: 2px 2px 10px gray;
     border-radius: 20px;
 }
-
-
 
 /*bottom section */
 .bottom-section{
