--- a/style.css
+++ b/style.css
@@ -48,14 +48,7 @@ p{
     background-color: #4AACFB;
     color: white;
 }
-/*.header-child:first-of-type{
-    width: 25%;
-    padding-left: 5%;
-}
-.header-child:last-of-type{
-    width: 35%;
-    padding-left: 35%;
-}*/
+
 .header h1{
     width: 25%;
     padding-left: 5%;
@@ -82,6 +75,9 @@ li{
 }
 
 /*top section */
+.top-section{
+    margin-top:50px;
+}
 .top-child{
     width: 50%;
     padding-left: 5%;
